--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </video>
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <figaption>Exceptional Promotional Video - Source: archive.org</figcaption>
+          <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
         </figure>
       </section>
 
